--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="layout-reverse", class="theme-base-08">
+    
 
     {% include sidebar.html %}
 
